# memphis

./: doctor  memphis.cabal  patient  stack.yaml
app/: Main.hs
python/: twilioRun.py
src/: Diagnosis.hs  Form.hs  Lib.hs  Types.hs
