name:                memphis
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/memphis#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Form
                     , Diagnosis
  build-depends:       base >= 4.7 && < 6
                     , aeson
                     , blaze-html
                     , blaze-markup
                     , digestive-functors
                     , digestive-functors-blaze
                     , digestive-functors-happstack
                     , hashmap
                     , happstack-server
                     , mtl
                     , servant
                     , servant-server
                     , transformers
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TypeOperators

executable memphis-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hashmap
                     , memphis
                     , servant-server
                     , warp
  default-language:    Haskell2010

test-suite memphis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , memphis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/memphis
